# domain-email-records

./: .gitignore  README.md  package.yml  pyproject.toml  setup.py
.changelog/: 0.1.0.toml  0.1.0.yml  0.1.1.toml  0.1.1.yml  0.2.0.toml  0.2.0.yml  0.3.0.toml  0.3.0.yml  0.4.0.toml  0.4.0.yml  0.4.1.toml  0.4.1.yml  0.5.0.toml  _unreleased.toml  _unreleased.yml
.github/workflows/: build-tests.yml
src/domain_email_records/: __init__.py  cli_entrypoint.py  constants.py  domain_email_records.py  exceptions.py  logger.py  main.py
src/domain_email_records/lib/: args.py  domain_email_records.py  logger.py
tests/test_imports/: test_import.py
